// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleSetDetailsPanel/> default props 1`] = `
Array [
  <div
    className="panel panel-default"
  >
    <div
      className="panel-body"
    >
      <form
        className=""
      >
        <div
          className="margin-bottom row"
        >
          <div
            className="col-xs-3"
          >
            <span>
              Name *
               
              <i
                className="fa fa-question-circle"
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              />
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              className="form-control"
              id="sample-set-create-name"
              onChange={[Function]}
              placeholder="Enter a name for this sample set"
              type="text"
            />
          </div>
        </div>
        <div
          className="margin-bottom row"
        >
          <div
            className="col-xs-3"
          >
            <span>
              Name Expression
               
              <i
                className="fa fa-question-circle"
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              />
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              className="form-control"
              id="sample-set-create-name-expression"
              onChange={[Function]}
              placeholder="S-\${now:date}-\${batchRandomId}-\${randomId}"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-xs-3"
          >
            <span>
              Description
               
              <i
                className="fa fa-question-circle"
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              />
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <textarea
              className="form-control"
              id="sample-set-create-description"
              onChange={[Function]}
              value=""
            />
          </div>
        </div>
      </form>
    </div>
  </div>,
  <div
    className="form-group no-margin-bottom"
  >
    <div
      className=""
    >
      <div
        className="pull-left"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        className="btn-group pull-right"
      >
        <button
          className="btn btn-success"
          disabled={true}
          onClick={[Function]}
          type="submit"
        >
          Finish
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`<SampleSetDetailsPanel/> nameExpressionInfoUrl 1`] = `
Array [
  <div
    className="panel panel-default"
  >
    <div
      className="panel-body"
    >
      <form
        className=""
      >
        <div
          className="margin-bottom row"
        >
          <div
            className="col-xs-3"
          >
            <span>
              Name *
               
              <i
                className="fa fa-question-circle"
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              />
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              className="form-control"
              id="sample-set-create-name"
              onChange={[Function]}
              placeholder="Enter a name for this sample set"
              type="text"
            />
          </div>
        </div>
        <div
          className="margin-bottom row"
        >
          <div
            className="col-xs-3"
          >
            <span>
              Name Expression
               
              <i
                className="fa fa-question-circle"
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              />
            </span>
            <br />
            (
            <a
              href="#anything"
              target="_blank"
            >
              more info
            </a>
            )
          </div>
          <div
            className="col-xs-9"
          >
            <input
              className="form-control"
              id="sample-set-create-name-expression"
              onChange={[Function]}
              placeholder="S-\${now:date}-\${batchRandomId}-\${randomId}"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-xs-3"
          >
            <span>
              Description
               
              <i
                className="fa fa-question-circle"
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              />
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <textarea
              className="form-control"
              id="sample-set-create-description"
              onChange={[Function]}
              value=""
            />
          </div>
        </div>
      </form>
    </div>
  </div>,
  <div
    className="form-group no-margin-bottom"
  >
    <div
      className=""
    >
      <div
        className="pull-left"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        className="btn-group pull-right"
      >
        <button
          className="btn btn-success"
          disabled={true}
          onClick={[Function]}
          type="submit"
        >
          Finish
        </button>
      </div>
    </div>
  </div>,
]
`;
